--- a/Kandidathantering/Kandidathantering/style.css
+++ b/Kandidathantering/Kandidathantering/style.css
@@ -1,21 +1,141 @@
+
+
 body{
-    padding-left: 20%;
-    padding-right: 20%;
+    /*padding-left: 20%;
+    padding-right: 20%;*/
+    margin: 0;
+    
+
 }
 
+
+section{
+    margin-bottom: 20px;
+}
 .blogPostContainer{
-    
+
 }
 
 .blogPostTitle{
-    
+
 }
 
 .blogPostPost{
-    
+
 }
 
 .blogPostAuthor{
     font-style: italic;
 }
 
+.heroVideo {
+    width: 100%;
+    filter: brightness(0.5);
+}
+
+.hero{
+    /*width: 100vw;*/
+    /*height: 100vh;*/
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+
+}
+
+.heroText{
+    position: absolute;
+    color: white;
+
+}
+
+.workForUs{
+    margin-left: 10%;
+    width: 45%;
+    float: left;
+}
+
+.profile{
+    float: left;
+    margin-left: 5%;
+}
+
+.jobs{
+    clear: both;
+    width: 100%;
+    height: 50px;
+    background: red;
+}
+
+.blog{
+    width: 100%;
+    display: flex;
+
+
+}
+
+.viewBlog{
+    display: flex;
+    justify-content: center;
+
+
+
+
+    align-items: center;
+    float: left;
+    width: 40%;
+    background: black;
+}
+
+.viewBlogBtn{
+    position: absolute;
+}
+
+.latestBlogPost{
+    float: left;
+    width: 55%;
+    background: whitesmoke;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    padding-right: 10%;
+}
+
+/*.imageGalleryList{
+    padding: 0;
+    list-style-type: none;
+     
+    display: inline-block;
+ 
+}*/
+
+.imageGallery{
+    width: 100%;
+}
+
+.imageGallery > video, .imageGallery > img{
+    width: calc(100%/3);
+    position: relative;
+    float: left;
+
+
+
+}
+
+
+@media(min-width: 2000px) {
+    .imageGallery > video, .imageGallery > img{
+        width: calc(100%/5);
+    }
+
+    .hideIf2000pxOrMore{
+        display: none;
+    }
+}
+
+@media(max-width: 768px) {
+    .imageGallery > video, .imageGallery > img{
+        width: 100%;
+    }
+}
