--- a/Kandidathantering/Kandidathantering/style.css
+++ b/Kandidathantering/Kandidathantering/style.css
@@ -3,8 +3,17 @@ body{
     /*padding-left: 20%;
     padding-right: 20%;*/
     margin: 0;
+    
 }
 
+body, input, a{
+    font-family: 'Arvo';
+    font-size: 1em;
+}
+
+input:focus{
+    outline: none;
+}
 
 section{
     margin-bottom: 20px;
@@ -40,23 +49,63 @@ section{
     text-align: center;
 
 
+
 }
 
 .heroText{
     position: absolute;
     color: white;
-
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
 .workForUs{
-    margin-left: 10%;
-    width: 45%;
+    padding-left: 20%;
+    width: 35%;
     float: left;
+}
+
+.strategWhite{
+    display: none;
 }
 
 .profile{
     float: left;
     margin-left: 5%;
+    width: 30%;
+    text-align: center;
+}
+
+
+.profile input { 
+    border:2px solid black; 
+    background-color: white;
+    padding: 10px;
+    color: black;
+    min-width: 140px;
+
+
+}
+
+.profile img{
+    width: 120px;
+    margin-bottom: 30px;
+}
+
+.profile input:hover{
+
+    background-color: black;
+    color: white;
+
+}
+
+.loginForm input:hover{
+    background-color: white;
+    color: black;
+}
+
+.loginForm a{
+    color: black;
 }
 
 .jobs{
@@ -151,9 +200,16 @@ section{
     padding: 10px;
     background-color: black;
     color: white;
-    
+
 
 } 
+
+.viewBlog input:hover{
+    border: none;
+    background-color: white;
+    color: black;
+
+}
 
 
 .latestBlogPost{
@@ -212,6 +268,51 @@ section{
         width: calc(100%/3);
 
     }
+
+    .profile{
+        width: 100%;
+        float: none;
+        background: black;
+        color: white;
+        margin-left: 0;
+        padding-bottom: 30px;
+        padding-top: 10px;
+    }
+
+    .workForUs{
+        float: none;
+        width: 60%;
+        padding-right: 20%;
+    }
+
+    .strategWhite{
+        display: inline-block;
+    }
+
+    .strategBlack{
+        display: none;
+    }
+
+    .profile input{
+        background-color: black;
+        border: 2px solid white;
+        color: white;
+    }
+
+    .profile input:hover{
+        background-color: white;
+        color: black;
+        border: 2px solid white;
+    }
+    .profile .loginForm input:hover{
+        background-color: transparent;
+        color: white;
+    }
+    
+    .loginForm a{
+    color: white;
+}
+
 }
 
 
