--- a/Kandidathantering/Kandidathantering/style.css
+++ b/Kandidathantering/Kandidathantering/style.css
@@ -1,14 +1,16 @@
+/* Global selectors
+   ========================================================================== 
+*/
+
+::-webkit-file-upload-button { cursor:pointer; }
 
 body{
-    /*padding-left: 20%;
-    padding-right: 20%;*/
     margin: 0;
-
 }
 
-body, input, a{
-    font-family: 'Arvo';
+body *{
     font-size: 1em;
+    font-family: 'Arvo';
 }
 
 input:focus{
@@ -18,24 +20,80 @@ input:focus{
 section{
     margin-bottom: 20px;
 }
-.blogPostContainer{
-    position: relative;
-margin: 0;
-margin: auto;
-width: 80%;
+
+input[type="text"], input[type="password"]{
+    padding: 10px;
 }
 
-.blogPostTitle{
-
+input[type="submit"]:hover, input[type="file"]:hover{
+    cursor: pointer !important;
 }
 
-.blogPostPost{
 
+
+
+
+
+
+
+
+
+/* Reusable custom classes
+   ========================================================================== 
+*/
+.errors{
+    color: red;
 }
 
-.blogPostAuthor{
-    font-style: italic;
+.button{
+    text-align: center;
+    padding: 20px;
+    cursor: pointer;
+    outline:none;
 }
+
+.button-black{
+    border: 2px solid white;
+    background-color: black;
+    color: white;
+}
+.button-black:hover{
+    background-color: white;
+    color: black;
+}
+
+.button-white{
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+}
+.button-white:hover{
+    background-color: black;
+    color: white;
+}
+
+.navHeader{
+    width: 100%;
+    margin-top: 20px;
+    text-align: center !important;
+}
+
+.navImg{
+    height: 10vh;
+}
+
+
+
+
+
+
+
+
+
+
+/* Index
+   ========================================================================== 
+*/
 
 .heroVideo {
     width: 100%;
@@ -43,16 +101,11 @@ width: 80%;
 }
 
 .hero{
-    /*width: 100vw;*/
-    /*height: 100vh;*/
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-
-
-
 }
 
 .heroTextBig{
@@ -69,36 +122,32 @@ width: 80%;
 
 .workForUs{
     position: relative;
-    padding-left: 10%;
-    width: 50%;
+    padding-left: 20%;
+    width:60%;
     float:left;
-}
-
-.workForUs h1, .workForUs h3{
     text-align: center;
-}
-
-.strategWhite{
-    display: none;
 }
 
 .profile{
     position: relative;
     float: left;
-    margin-left: 5%;
-    width: 30%;
+    background: black;
+    width: 100%;
     text-align: center;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-
 .profile input { 
-    border:2px solid black; 
-    background-color: white;
-    padding: 10px;
-    color: black;
-    min-width: 140px;
+    width: 160px;
 
+}
 
+.profile input[type="text"], .profile input[type="password"]{
+    background-color: black;
+    border: 2px solid white;
+    color: white;
 }
 
 .profile img{
@@ -106,21 +155,8 @@ width: 80%;
     margin-bottom: 30px;
 }
 
-.profile input:hover{
-
-    background-color: black;
-    color: white;
-
-}
-
-.loginForm input[type='text']:hover, .loginForm input[type='password']:hover{
-    background-color: white !important;
-    color: black;
-}
-
-
 .loginForm a{
-    color: black;
+    color: white;
 }
 
 .jobs{
@@ -128,12 +164,9 @@ width: 80%;
     width: 100%;
 }
 
-
-
 .jobContainer{
     width: calc(100%/5);
     display: inline-block;
-
     overflow: hidden;
 }
 
@@ -154,244 +187,102 @@ width: 80%;
 .jobListingImage{
     left: 50%;
     transform: translateX(-50%);
-
     max-height: 200px;
     max-width: 100%;
     position: absolute;
     bottom: 0;
-
 }
-
-
 
 .jobTitleButton{
     margin-top: 20px;
-    border: 2px solid black;
-    padding: 10px;
-    text-align: center;
 }
 
 .jobTitleButton:hover{
-    background: black;
-    color: white;
+
 }
-
-
-
-
 
 .blog{
     width: 100%;
     display: flex;
-
-
 }
 
 .viewBlog{
-
     display: flex;
-
     justify-content: center;
-
-
-
-
-
     align-items: center;
     float: left;
     width: 40%;
     background: black;
-
 }
 
 .viewBlogBtn{
     position: absolute;
-
-
 }
-
-.viewBlog input { 
-    border:2px solid white; 
-    padding: 10px;
-    background-color: black;
-    color: white;
-
-
-} 
-
-.viewBlog input:hover{
-    border: none;
-    background-color: white;
-    color: black;
-
-}
-
 
 .latestBlogPost{
     float: left;
     width: 60%;
     background: whitesmoke;
     padding: 20px;
-    /*    padding-bottom: 10px;*/
-    /*    padding-right: 20px;*/
 }
-
-/*.imageGalleryList{
-    padding: 0;
-    list-style-type: none;
-     
-    display: inline-block;
- 
-}*/
 
 .imageGallery{
     width: 100%;
 }
 
-.imageGallery > video, .imageGallery > img{
+.imageGallery video, .imageGallery img{
     width: calc(100%/3);
     position: relative;
     float: left;
-
-
-
-}
-
-
-@media(min-width: 2000px) {
-    .imageGallery > video, .imageGallery > img{
-        width: calc(100%/5);
-    }
-
-    .hideIf2000pxOrMore{
-        display: none;
-    }
 }
 
 
 
 
-@media(max-width: 1600px) {
-    .jobContainer{
-        width: calc(100%/4);
 
-    }
+
+
+
+
+
+/* Blog page
+   ========================================================================== 
+*/
+.blogPostContainer{
+    position: relative;
+    margin: 0;
+    margin: auto;
+    width: 80%;
 }
 
-@media(max-width: 1300px) {
-    .jobContainer{
-        width: calc(100%/3);
+.blogPostTitle{}
 
-    }
+.blogPostPost{}
 
-    .workForUs{
-        width: 80%;
-        padding-left: 0px;
-        margin-left: 10%;
-    }
-
-    .profile{
-        width: 100%;
-        clear: both;
-        background: black;
-        color: white;
-        margin-left: 0;
-        padding-bottom: 30px;
-        padding-top: 10px;
-    }
-
-
-
-
-    .strategWhite{
-        display: inline-block;
-    }
-
-    .strategBlack{
-        display: none;
-    }
-
-    .profile input{
-        background-color: black;
-        border: 2px solid white;
-        color: white;
-    }
-
-    .profile input:hover{
-        background-color: white;
-        color: black;
-        border: 2px solid white;
-    }
-    .profile .loginForm input[type='text']:hover, .profile .loginForm input[type='password']:hover{
-        background-color: black !important;
-        color: white;
-    }
-
-    .loginForm a{
-        color: white;
-    }
-
+.blogPostAuthor{
+    font-style: italic;
 }
 
 
-@media(max-width: 768px) {
-    .imageGallery > video, .imageGallery > img{
-        width: 100%;
-    }
-
-
-    .jobContainer{
-        width: calc(100%/2);
-
-    }
-
-    .heroTextSmall{
-        display:block;
-        position: relative;
-        color: black;
-    }
-    .heroTextBig{
-        display:none;
-    }
 
 
 
-    .blog{
-        display: block; 
-    }
-    .viewBlog{
-
-        width: 100%;
-        padding-top: 50px;
-        padding-bottom: 50px;
-    }
-    .latestBlogPost{
-        display: block; 
-        width: 100%;
-        padding: 0px;
-    }
-    .blogPostContainer{
-        padding:20px;
-    }
-}
-
-@media(max-width: 600px) {
-    .jobContainer{
-        width: calc(100%/1);
-
-    }
-}
 
 
+
+
+
+
+/* Job page
+   ========================================================================== 
+*/
 .jobPostContainer{
     max-width: 700px;
     margin: auto;
     margin-top: 50px;
-
 }
 
 .jobPostContainer h1{
-
     text-align: center;
 }
 
@@ -405,94 +296,97 @@ width: 80%;
 
 .jobPostImageWrapper{
     height: 70vh;
-
-
     max-width: inherit;
-
     position: relative;
-
-
 }
 
 .jobPostImage{
-
     position: absolute;
     margin: auto;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-
     max-width: 95%;
     max-height: 100%;
-
 }
 
-.messageContainer textArea{
-
-    /*    min-height: 400px;*/
+#jobSearch{
+    text-align: center;
+    margin-bottom: 10%;
+    margin-top: 50px;
 }
 
-.hs_message{
-/*    text-align: center !important;*/
 
+
+
+
+
+
+
+
+
+/* Message page
+   ========================================================================== 
+*/
+.messageContainer .hbspt-form input[type="submit"]{
+    width: 500px;
+    max-width: 100%;
 }
 
-.updateProfileFormContainer, .messageContainer, .regForm{
+
+
+
+
+
+
+
+
+
+/* HubSpot form wrapper
+   ========================================================================== 
+*/
+.hsFormContainer{
     position: relative;
-
     margin:auto;
     max-width: 80%;
     width: 500px;
-    padding-right: 7%;
+/*    padding-right: 7%;*/
+    margin-bottom: 50px;
 }
 
-.updateProfileFormContainer h1, .messageContainer h1, .regForm h1{
+.hbspt-form input[type="submit"]{
+    padding: 20px !important;
+}
+
+.hsFormContainer h1{
     text-align: center;
 }
 
-input[type="submit"]:hover, input[type="file"]:hover{
-    cursor: pointer !important;
-}
-::-webkit-file-upload-button { cursor:pointer; }
-/*body .hs-button.primary{
-    cursor: pointer;
-}*/
 
-.regForm{
-/*    position: relative;
-    margin:auto;
-    max-width: 80%;
-    width: 500px;*/
-    padding-right: 0%;
-    padding-top: 10%;
-}
 
-.regForm input{
-    border: 2px solid black;
-    margin-bottom: 20px;
-    width: 100%;
-    padding: 10px;
-}
 
-.regForm input[type='submit']{
-    width: 524px;
-    margin-top: 20px;
-    background-color: white;
-    max-width: 107%;
 
-}
 
-.regForm input[type='submit']:hover{
 
-    background-color: black;
-    color: white;
 
-}
 
+/* Register page
+   ========================================================================== 
+*/
 .regForm h1{
     text-align: center;
 }
+.regForm input{
+    width: 100% !important;
+    border: 2px solid black;
+}
+
+.regForm input[type='submit']{
+    width: 107% !important;
+    max-width: 524px;
+    margin-top: 20px;
+}
 
 
 
@@ -502,16 +396,98 @@ input[type="submit"]:hover, input[type="file"]:hover{
 
 
 
-/* All HubSpot Forms
-   ========================================================================== */
+/* Custom responsive design changes
+   ========================================================================== 
+*/
+@media(min-width: 2000px) {
+    .imageGallery video, .imageGallery img{
+        width: calc(100%/5);
+    }
+
+    .hideIf2000pxOrMore{
+        display: none;
+    }
+}
+
+@media(max-width: 1600px) {
+    .jobContainer{
+        width: calc(100%/4);
+    }
+}
+
+@media(max-width: 1300px) {
+    .jobContainer{
+        width: calc(100%/3);
+    }
+
+    .workForUs{
+        width: 80%;
+        padding-left: 0px;
+        margin-left: 10%;
+    }
+}
+
+@media(max-width: 768px) {
+    .imageGallery video, .imageGallery img{
+        width: 100%;
+    }
+
+    .jobContainer{
+        width: calc(100%/2);
+    }
+
+    .heroTextSmall{
+        display:block;
+        position: relative;
+        color: black;
+    }
+
+    .heroTextBig{
+        display:none;
+    }
+
+    .blog{
+        display: block; 
+    }
+
+    .viewBlog{
+        width: 100%;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .latestBlogPost{
+        display: block; 
+        width: 100%;
+        padding: 0px;
+    }
+
+    .blogPostContainer{
+        padding:20px;
+    }
+}
+
+@media(max-width: 600px) {
+    .jobContainer{
+        width: calc(100%/1);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+/* All HubSpot Forms, classes to manipulate embedded HubSpot form
+   ========================================================================== 
+*/
 .hbspt-form {
     margin-top: 10%;
     text-align: left;
-    color: black;
-    font-size: 1em;
-    font-family: 'Arvo';
-
-
 }
 
 /* Form Field (selector for form field wrapper) */
@@ -600,7 +576,9 @@ input[type="submit"]:hover, input[type="file"]:hover{
 .hs-form select:focus:required:invalid:focus {}
 
 /* Error message (selector for validation messages) */
-.hs-form .hs-error-msgs label{}
+.hs-form .hs-error-msgs{
+    color: red;
+}
 
 /* Placeholder Text (styles the placeholder attribute text) */
 ::-webkit-input-placeholder { /* Webkit Browsers */}
@@ -628,18 +606,11 @@ body .hbspt-form input[type="submit"],
 body .hbspt-form input[type="button"] {
     position: relative;
     background-color: white;
-    /*    cursor: pointer !important;*/
-
     padding: 10px;
     width: 524px;
     max-width: 107%;
     min-width: 100%;
     border: 2px solid black;
-}
-
-body .messageContainer .hbspt-form input[type="submit"]{
-    width: 500px;
-    max-width: 100%;
 }
 
 body .hs-button.primary:hover,
